--- a/JavaScript/vanilla_dom_manipulation/index.html
+++ b/JavaScript/vanilla_dom_manipulation/index.html
@@ -31,8 +31,8 @@
     <div class="list-container">
       The city also has a number of great places just to visit. What are some of your favorites?
       <br/>
-      <form>
-        <input type="text" class="favorite-input"/>
+      <form id="favorite-place">
+        <input type="text" class="favorite-input" placeholder="Your place here!"/>
         <input type="submit" class="favorite-submit" value="Add to list"/>
       </form>
       <ul id="sf-places">
