complete maxAndMin codewars-js challenge

--- a/js/my_jquery/index.html
+++ b/js/my_jquery/index.html
@@ -1,22 +1,11 @@
-<!DOCTYPE html>
 <html>
 
   <head>
     <title>My jQuery</title>
-    <script type="text/javascript" src="lib/jquery_lite.js" charset="utf-8"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
 
   </head>
 
   <body>
-    <script>
-      function dothing(){
-        var el = document.getElementsByClassName("this-list");
-        var newEl = el.children.first;
-        newEl.html("NEW TEXT");
-        debugger;
-      })
-    </script>
 
     <div class="this-div">
       <h1>title-like thing</h1>
@@ -27,7 +16,8 @@
       </ul>
     </div>
 
-    <button onclick="dothing();">Button</button>
+    <script src="I2_DeepDiveJQuery/jquery-1.11.2.js"></script>
+    <script src="main.js"></script>
   </body>
 
 </html>
