setup my_jQuery project

--- a/js/my_jquery/index.html
+++ b/js/my_jquery/index.html
@@ -1,23 +1,26 @@
+<!DOCTYPE html>
 <html>
-
   <head>
-    <title>My jQuery</title>
-
+    <meta charset="utf-8">
+    <title>nicQuery</title>
+    <script type="text/javascript" src="lib/jquery-3.1.1.js"></script>
+    <script type="text/javascript" src="lib/nicQuery.js"></script>
   </head>
-
   <body>
-
-    <div class="this-div">
-      <h1>title-like thing</h1>
-      <ul class="this-list">
-        <li>thingsthingsthigns</li>
-        <li>other things</li>
+    <h1>Welcome to this webpage</h1>
+    <div class="test-div">
+      <ul class="list-of-things">
+        <li>thing1</li>
+        <li>thing 2</li>
+        <li>things things things</li>
         <li>more things</li>
+        <ul class="things-within-things">
+          <li>thing</li>
+          <li>thing</li>
+          <li>and one more</li>
+          <li>for good luck</li>
+        </ul>
       </ul>
     </div>
-
-    <script src="I2_DeepDiveJQuery/jquery-1.11.2.js"></script>
-    <script src="main.js"></script>
   </body>
-
 </html>
