--- a/js/my_jquery/index.html
+++ b/js/my_jquery/index.html
@@ -6,16 +6,12 @@
     <script type="text/javascript" src="lib/jquery-3.1.1.js"></script>
     <script type="text/javascript" src="lib/nicQuery.js"></script>
 
-
     <script>
-    $(document).ready(
-     function() {
-       $( "[type=submit]" ).on("click", () => {
-         alert("checked!");
+      $(() => {
+         nic$( "li" ).on("click", () => alert("you clicked an li!"));
        });
-     }
-    )
-</script>
+    </script>
+    
   </head>
   <body>
     <h1>Welcome to this webpage</h1>
