--- a/react/Minesweeper/index.html
+++ b/react/Minesweeper/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
-	<script src="bundle.js"></script>
+  <meta charset="UTF-8">
+  <title>React Boilerplate</title>
 </head>
 <body>
-	<div id='root'/>
+  <div id="app"></div>
+  <script src="/bundle.js"></script>
 </body>
 </html>
