add some styling and start to handleClick

--- a/react/Minesweeper/index.html
+++ b/react/Minesweeper/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <link rel="stylesheet" href="/style/application.css">
   <title>mineSweeper</title>
 </head>
 <body>
