everything minus a modal

--- a/react/Minesweeper/index.html
+++ b/react/Minesweeper/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="/style/reset.css">
   <link rel="stylesheet" href="/style/application.css">
   <title>mineSweeper</title>
 </head>
