get currency converter up and running

--- a/react/currency_converter/index.html
+++ b/react/currency_converter/index.html
@@ -5,6 +5,7 @@
     <title>Currency Conversion</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="bundle.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./reset.css" type="text/css">
     <link rel="stylesheet" href="./application.css" type="text/css">
   </head>
   <body>
