--- a/react/todo_list/index.html
+++ b/react/todo_list/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>Todo List</title>
     <script src="bundle.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="./frontend/style/reset.css" type="text/css">
-    <link rel="stylesheet" href="./frontend/style/application.css" type="text/css">
+    <link rel="stylesheet" href="./frontend/style/app.css" type="text/css">
+    <link rel="stylesheet" href="./frontend/style/todos.css" type="text/css">
+    <link rel="stylesheet" href="./frontend/style/steps.css" type="text/css">
   </head>
   <body>
     <div id=root>
